fix overflow y scrollbar problem

--- a/src/components/Cart.module.css
+++ b/src/components/Cart.module.css
@@ -1,3 +1,14 @@
+/* Hide scrollbar for Chrome, Safari and Opera */
+.add_meal ::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.add_meal {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 .cart {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -25,7 +36,7 @@
   background-color: var(--main-green);
 }
 .add_meal {
-  overflow-y: scroll;
+  overflow-y: auto;
   max-height: 70vh;
 }
 .add_meal,
